--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
